@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-13T08:10:36Z",
-  "count_outdated" : 608,
-  "uniques_outdated" : 121,
-  "count" : 637,
-  "uniques" : 127,
+  "timestamp" : "2022-09-13T16:07:47Z",
+  "count_outdated" : 610,
+  "uniques_outdated" : 123,
+  "count" : 638,
+  "uniques" : 128,
   "views" : [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-02T00:00:00Z",
       "count": 1,
