@@ -1,12 +1,7 @@
 {
-  "count": 29,
-  "uniques": 6,
+  "count": 28,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-02T00:00:00Z",
       "count": 1,
