@@ -1,3 +1,11 @@
+2022-09-13T16:07:47Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3046629294
+* notice: last 14d: unq all: 5 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 121 608 / 127 637
+* notice: next accum: outdated-unq outdated-all / unq all: 123 610 / 128 638
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-30] / []
+
 2022-09-13T08:10:36Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3043392723
 * notice: last 14d: unq all: 6 29
